// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<OTUsList /> should render 1`] = `
<div>
  <Connect(ReferenceDetailHeader) />
  <Connect(ReferenceDetailTabs) />
  <Connect(RebuildAlert) />
  <Connect(OTUToolbar) />
  <withRouter(Connect(CreateOTU))
    documents={
      Array [
        "foo",
      ]
    }
    onLoadNextPage={
      [MockFunction] {
        "calls": Array [
          Array [
            "foo",
            "bar",
            true,
            1,
          ],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      }
    }
    otus={
      Object {
        "verified": true,
      }
    }
    page={1}
    page_count={1}
    refId="foo"
    references={
      Object {
        "detail": Object {
          "id": 1,
        },
      }
    }
    renderRow={true}
    term="bar"
    verified={true}
  />
  <ScrollList
    documents={
      Array [
        "foo",
      ]
    }
    onLoadNextPage={[Function]}
    page={1}
    pageCount={1}
    renderRow={[Function]}
  />
</div>
`;

exports[`<OTUsList /> should render when [this.props.documents === null] 1`] = `<LoadingPlaceholder />`;

exports[`<OTUsList /> should render when [this.props.documents.length == false] 1`] = `
<div>
  <Connect(ReferenceDetailHeader) />
  <Connect(ReferenceDetailTabs) />
  <Connect(RebuildAlert) />
  <Connect(OTUToolbar) />
  <withRouter(Connect(CreateOTU))
    documents={false}
    onLoadNextPage={
      [MockFunction] {
        "calls": Array [
          Array [
            "foo",
            "bar",
            true,
            1,
          ],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      }
    }
    otus={
      Object {
        "verified": true,
      }
    }
    page={1}
    page_count={1}
    refId="foo"
    references={
      Object {
        "detail": Object {
          "id": 1,
        },
      }
    }
    renderRow={true}
    term="bar"
    verified={true}
  />
  <NoneFound
    noun="otus"
  />
  <ScrollList
    documents={false}
    onLoadNextPage={[Function]}
    page={1}
    pageCount={1}
    renderRow={[Function]}
  />
</div>
`;
